@@ -1,3 +1,13 @@
+Mon Nov 15 11:00:15 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * tests/IDL_Test/NonTopic_Connector:
+        * tests/IDL_Test/NonTopic_Connector/nontopic_test.idl:
+        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.mpc:
+        * tests/IDL_Test/NonTopic_Connector/NonTopic_Base.idl:
+        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector.idl:
+        * tests/IDL_Test/NonTopic_Connector/NonTopic_Connector_T.h:
+         Added  test.
+
 Mon Nov 15 10:41:39 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/ConditionManager.cpp:
